added readme and edited notebook

--- a/Entity_Resolution.ipynb
+++ b/Entity_Resolution.ipynb
@@ -26,11 +26,10 @@
     "Write down the UNIs of your group (if applicable)\n",
     "\n",
     "Name : Shih Hua Yu\n",
-    "Uni  : sy2734\n",
     "\n",
-    "Member 2: Chang Ding, cd2959\n",
+    "Member 2: Chang Ding\n",
     "\n",
-    "Member 3: Lisa Kim, lk2715\n",
+    "Member 3: Lisa Kim\n",
     "\"\"\"\n",
     "def get_matches(locu_train_path, foursquare_train_path, matches_train_path, locu_test_path, foursquare_test_path):\n",
     "    \n",
